--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
 # Dependencias principales
-rasa>=3.0.0
-rasa-sdk>=3.0.0
-sentence-transformers>=2.2.2
-scikit-learn>=1.0.2
-numpy>=1.20.0
+rasa==3.6.2
+rasa-sdk==3.6.1
+sentence-transformers==2.2.2
+scikit-learn==1.0.2
+numpy==1.21.6
 
 # Dependencias adicionales recomendadas para un proyecto Rasa
-requests>=2.25.1
-python-dotenv>=0.19.0
-sanic>=21.9.0
-sanic-cors>=1.0.0
-
-
+requests==2.25.1
+python-dotenv==0.21.0
+sanic==21.12.1
+sanic-cors==2.0.1
